@@ -1,6 +1,6 @@
 /*
  *  GRUB  --  GRand Unified Bootloader
- *  Copyright (C) 2004,2005,2006,2007  Free Software Foundation, Inc.
+ *  Copyright (C) 2004,2005,2006,2007,2008  Free Software Foundation, Inc.
  *
  *  GRUB is free software: you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -216,11 +216,6 @@ add_segments (char *dir, FILE *out, int chrp, char *mods[])
   if (mods[0] != NULL)
     {
       grub_addr_t modbase;
-
-/* Only needed for Apple hardware (therefore, powerpc).  */
-#ifndef GRUB_MOD_GAP
-#define GRUB_MOD_GAP 0
-#endif
 
       /* Place modules just after grub segment.  */
       modbase = ALIGN_UP(grub_end + GRUB_MOD_GAP, GRUB_MOD_ALIGN);
